--- a/master/requirements.txt
+++ b/master/requirements.txt
@@ -5,6 +5,7 @@ django-classy-tags==2.0.0
 django-taggit==1.3.0
 django-taggit-templatetags2==1.6.1
 django-widget-tweaks==1.4.8
+mysqlclient==2.0.2
 Pillow==8.0.1
 psycopg2 @ file:///C:/ci/psycopg2_1594305209841/work
 pytz==2020.1
