--- a/master/requirements.txt
+++ b/master/requirements.txt
@@ -5,9 +5,13 @@ django-classy-tags==2.0.0
 django-taggit==1.3.0
 django-taggit-templatetags2==1.6.1
 django-widget-tweaks==1.4.8
-mysqlclient==2.0.2
+et-xmlfile==1.0.1
+jdcal==1.4.1
+mysqlclient==2.0.3
+openpyxl==3.0.6
 Pillow==8.0.1
 psycopg2 @ file:///C:/ci/psycopg2_1594305209841/work
+PyMySQL==1.0.2
 pytz==2020.1
 sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
 wincertstore==0.2
