--- a/rest_framework/requirements.txt
+++ b/rest_framework/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.3.1
 certifi==2020.6.20
+chardet==4.0.0
+click==7.1.2
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.1.5
 django-classy-tags==2.0.0
 django-cors-headers==3.7.0
@@ -7,12 +11,33 @@ django-taggit==1.3.0
 django-taggit-templatetags2==1.6.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.2
+drf-yasg==1.20.0
 et-xmlfile==1.0.1
+flex==6.14.1
+idna==2.10
+inflection==0.5.1
+itypes==1.2.0
 jdcal==1.4.1
+Jinja2==2.11.3
+jsonpointer==2.1
+MarkupSafe==1.1.1
 mysqlclient==2.0.2
 openpyxl==3.0.6
+packaging==20.9
 Pillow==8.0.1
+psycopg2==2.8.6
 PyMySQL==1.0.2
+pyparsing==2.4.7
 pytz==2020.1
+PyYAML==5.4.1
+requests==2.25.1
+rfc3987==1.3.8
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
+six==1.15.0
 sqlparse==0.4.1
+strict-rfc3339==0.7
+uritemplate==3.0.1
+urllib3==1.26.4
+validate-email==1.3
 wincertstore==0.2
