--- a/rest_framework/requirements.txt
+++ b/rest_framework/requirements.txt
@@ -1,4 +1,9 @@
+absl-py==0.12.0
 asgiref==3.3.1
+astor==0.8.1
+beautifulsoup4==4.9.3
+bs4==0.0.1
+cached-property==1.5.2
 certifi==2020.6.20
 chardet==4.0.0
 click==7.1.2
@@ -14,30 +19,58 @@ djangorestframework==3.12.2
 drf-yasg==1.20.0
 et-xmlfile==1.0.1
 flex==6.14.1
+gast==0.2.2
+google-pasta==0.2.0
+grpcio==1.37.1
+h5py==2.10.0
 idna==2.10
+importlib-metadata==4.0.1
 inflection==0.5.1
 itypes==1.2.0
 jdcal==1.4.1
 Jinja2==2.11.3
+joblib==1.0.1
 jsonpointer==2.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Markdown==3.3.4
 MarkupSafe==1.1.1
 mysqlclient==2.0.2
+numpy==1.19.5
 openpyxl==3.0.6
+opt-einsum==3.3.0
 packaging==20.9
+pandas==1.2.4
 Pillow==8.0.1
+protobuf==3.17.0
 psycopg2==2.8.6
 PyMySQL==1.0.2
 pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.4.1
 requests==2.25.1
 rfc3987==1.3.8
 ruamel.yaml==0.16.13
 ruamel.yaml.clib==0.2.2
+scikit-learn==0.24.2
+scipy==1.6.3
 six==1.15.0
+sklearn==0.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 strict-rfc3339==0.7
+tensorboard==1.15.0
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.60.0
+typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.4
 validate-email==1.3
+Werkzeug==2.0.0
 wincertstore==0.2
+wrapt==1.12.1
+zipp==3.4.1
