Update function Connecting to Net_plus database.
Update function Connecting to Net_plus database.

--- a/rest_framework/requirements.txt
+++ b/rest_framework/requirements.txt
@@ -1,12 +1,11 @@
-absl-py==0.12.0
-asgiref==3.3.1
+absl-py==0.11.0
+asgiref==3.2.10
 astor==0.8.1
 beautifulsoup4==4.9.3
-bs4==0.0.1
 cached-property==1.5.2
-certifi==2020.6.20
+certifi==2020.12.5
 chardet==4.0.0
-click==7.1.2
+click==8.0.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.5
@@ -21,28 +20,29 @@ et-xmlfile==1.0.1
 flex==6.14.1
 gast==0.2.2
 google-pasta==0.2.0
-grpcio==1.37.1
+grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==4.0.1
 inflection==0.5.1
 itypes==1.2.0
 jdcal==1.4.1
-Jinja2==2.11.3
+Jinja2==3.0.0
 joblib==1.0.1
 jsonpointer==2.1
+keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
-Markdown==3.3.4
-MarkupSafe==1.1.1
-mysqlclient==2.0.2
-numpy==1.19.5
-openpyxl==3.0.6
+Markdown==3.3.3
+MarkupSafe==2.0.0
+mysqlclient==2.0.1
+numpy==1.16.5
+openpyxl==3.0.5
 opt-einsum==3.3.0
 packaging==20.9
-pandas==1.2.4
+pandas==1.2.3
 Pillow==8.0.1
-protobuf==3.17.0
+protobuf==3.14.0
 psycopg2==2.8.6
 PyMySQL==1.0.2
 pyparsing==2.4.7
@@ -51,32 +51,29 @@ pytz==2020.1
 PyYAML==5.4.1
 requests==2.25.1
 rfc3987==1.3.8
-ruamel.yaml==0.16.13
+ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
-scikit-learn==0.24.2
-scipy==1.6.3
+scipy==1.4.1
 six==1.15.0
 
 soupsieve==2.2.1
-sqlparse==0.4.1
+sqlparse==0.3.1
 strict-rfc3339==0.7
-tensorboard==1.15.0
+tensorboard==1.16.0
 tensorflow==1.15.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tqdm==4.60.0
-typing-extensions==3.10.0.0
+typing-extensions==3.7.4.3
 uritemplate==3.0.1
-urllib3==1.26.4
+urllib3==1.26.2
 validate-email==1.3
 Werkzeug==2.0.0
 wincertstore==0.2
 wrapt==1.12.1
-zipp==3.4.1
-
-scikit-learn==0.23.2
-shap==0.36
-explainerdashboard==0.2.20.1
+zipp==3.4.0
+scikit-learn==0.24.1
+shap==0.36.0
 xgboost==0.90
-matplotlib
+matplotlib==3.3.4
