--- a/rest_framework/requirements.txt
+++ b/rest_framework/requirements.txt
@@ -37,6 +37,7 @@ djangorestframework==3.12.2
 drf-yasg==1.20.0
 dtreeviz==1.3
 et-xmlfile==1.0.1
+explainerdashboard==0.2.20.1
 Flask==1.1.2
 Flask-Compress==1.9.0
 Flask-SeaSurf==0.3.0
@@ -66,6 +67,7 @@ jsonpointer==2.1
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyter-dash==0.4.0
+keras==2.4.3
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
@@ -106,9 +108,9 @@ retrying==1.3.3
 rfc3987==1.3.8
 ruamel.yaml==0.16.13
 ruamel.yaml.clib==0.2.2
-scikit-learn==0.23.2
+scikit-learn==0.24.1
 scipy==1.6.3
-shap==0.36.0
+shap==0.39.0
 shortuuid==1.0.1
 six==1.15.0
 sklearn==0.0
@@ -118,11 +120,13 @@ sqlparse==0.4.1
 strict-rfc3339==0.7
 tensorboard==1.15.0
 tensorflow==1.15.0
+tensorflow-base==2.3.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
 toml==0.10.2
 tornado==6.1
+torch==1.7.0
 tqdm==4.60.0
 traitlets==5.0.5
 typing-extensions==3.7.4.3
